# Karpithal-LMS

./: README.md
backend/: manage.py  pyproject.toml
backend/accounts/: admin.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_userprofile_remove_user_is_admin_and_more.py
backend/courses/: models.py
backend/karpithal/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: FeaturedCategories.jsx  Footer.jsx  Hero.jsx  HowItWorks.jsx  Navbar.jsx  PopularCourses.jsx  PricingCards.jsx  Testimonials.jsx
frontend/src/components/ui/: accordion.jsx  action-search-bar.jsx  animated-group.jsx  button.jsx  command.jsx  customers-section.jsx  feature-section-with-hover-effects.jsx  gallery6.jsx  navbar.jsx  navigation-menu.jsx  pricing.jsx  sheet.jsx  testimonials.jsx
frontend/src/hooks/: use-media-query.jsx  use-toast.js
frontend/src/pages/: About.jsx  Business.jsx  Community.jsx  Courses.jsx  Index.jsx  Resources.jsx  SignIn.jsx  SignUp.jsx  Teach.jsx
